# cis_viz

./: .travis.yml
clever_raytracer_name/: CM_V168_rep100_M_mean.txt  CM_V189_rep100_M_mean.txt  CM_V201_rep100_M_mean.txt  CMakeCache.txt  CMakeLists.txt  Makefile  Model_test.txt  PPFDCM_V168_rep100_M_mean_12.txt  README.txt  TODO.txt  accel.hpp  apple_with_color.ply  bbox.hpp  bbox_accel.hpp  box.cpp  box.hpp  camera.hpp  cimodel.cpp  cis_ray  climate.cpp  climate.hpp  cmake_install.cmake  color.cpp  color.hpp  commandArgs.cpp  commandArgs.hpp  compound.cpp  compound.hpp  constants.cpp  constants.hpp  debug.cpp  debug.hpp  energyBalance.cpp  energyBalance.hpp  equations.cpp  equations.hpp  farquharModel.cpp  farquharModel.hpp  fullSoy_2-12a.ply  grid.cpp  (+46 more)
clever_raytracer_name/DataFiles/: File_labels.rtf
clever_raytracer_name/test_data_files_ply/: pyramid_with_color.ply
